# item_generator_api

./: .env  Dockerfile  app.py  config.py  dataclass.py  pyproject.toml  readme.md  schemas.py  test.html
routes/: __init__.py  difusion.py
services/: animation_service.py  image_service.py  item_generator_service.py  item_service.py
